--- a/myportfoliodetails2.html
+++ b/myportfoliodetails2.html
@@ -57,7 +57,7 @@
         <img src="assets\img\profile.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">UDHAYAKUMAR P</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/Udhayaaa_"  target="new"class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/udhayaaaaaaaa"  target="new"class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100037349821022" target="_new" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/udhayaa._/"  target="_new"class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://wa.me/+919342837135" target="_new" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
@@ -72,7 +72,7 @@
           <li><a href="#about" class="nav-link scrollto "><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"  class="nav-link scrollto "><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certification</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+         
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets\img\portfolio\GuviCertification - w8PQ6v411568Zj880y.png" alt="">
+                  <img src="assets\img\portfolio\GuviCertification - Python.png" alt="">
                 </div>
   
               </div>
@@ -128,11 +128,11 @@
             <div class="portfolio-info">
               <h3>Certificate Information</h3>
               <ul>
-                <li><strong>Category</strong>: Chat GPT</li>
+                <li><strong>Category</strong>: Chat GPT | Python</li>
                 <li><strong>Course Provider</strong>: GUVI</li>
                 <li><strong>Course Completion </strong>: 23 July, 2023</li>
-                <li><strong>Chat GPT URL</strong>: <a href="https://www.guvi.in/verify-certificate?id=4R8W07Omc9A62d3810" target="_new">www.guvi.com</a></li>
-                <li><strong>Python URL</strong>: <a href="https://www.guvi.in/verify-certificate?id=w8PQ6v411568Zj880y" target="_new">www.guvi.com</a></li>
+                <li><strong>ChatGPT URL</strong>: <a href="https://www.guvi.in/verify-certificate?id=4R8W07Omc9A62d3810" target="_new">guvi.com/chatgpt</a></li>
+                <li><strong>Python URL</strong>: <a href="https://www.guvi.in/verify-certificate?id=w8PQ6v411568Zj880y" target="_new">guvi.com/python</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
