--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -42,7 +42,7 @@
         <img src="assets\img\profile.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">UDHAYAKUMAR P</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/Udhayaaa_"  target="new"class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/udhayaaaaaaaa"  target="new"class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100037349821022" target="_new" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/udhayaa._/"  target="_new"class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://wa.me/+919342837135" target="_new" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
@@ -57,7 +57,7 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certification</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -71,6 +71,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
+
           <h2>Certificate Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -81,7 +82,10 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Portfolio Details Section ======= -->
+
+
+
+    <!-- ======= Certification Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
