--- a/forms/Untitled-1.html
+++ b/forms/Untitled-1.html
@@ -31,7 +31,7 @@ if (!empty($_POST)) {
    }
 
    if (empty($errors)) {
-       $toEmail = 'udhayaaakash03@gmail.com';
+       $toEmail = 'example@example.com';
        $emailSubject = 'New email from your contact form';
        $headers = ['From' => $email, 'Reply-To' => $email, 'Content-type' => 'text/html; charset=utf-8'];
        $bodyParagraphs = ["Name: {$name}", "Email: {$email}", "Message:", $message];
